    all other relevant controls are unmuted.
  * Fix a bashism in debian/rules.

  [ Raphael Geissert ]
  * Allow fine-grained control over the lid-closing action.
  * Make init script depend on $remote_fs, we use /usr
  * Add support for OSD notifications via kdialog (Closes: #519671)
    - Thanks to Gernot Pansy <pansyg@gmx.at> for the patch
  * Bump standards-version, no change needed

  [ Tanguy Ortolo ]
  * Fix "[ -e $foo ]" where foo may be empty. (Closes: #532631)

  [ Santi Béjar]
  * Add support for KMS in vga-toggle: when KMS (kernel mode setting) is
    used the output names have a number in the end (VGA1 and LVDS1).

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Mon, 25 May 2009 11:25:50 +0100

eeepc-acpi-scripts (1.1.0) unstable; urgency=low

  [ Darren Salt ]
  * Detect who's running an X session by looking for a controlling process
    with DISPLAY set in its environment.
    This has a useful side effect: status changes can be displayed even when
    the controlling process is a login manager.
  * Try to use rfkill when toggling wireless & bluetooth.
  * Ignore events when shutting down or rebooting.
  * Give immediate indication of pressing of Fn-F2.
  * The same ACPI key codes may be used for wireless on as well as off.
  * Allow reporting via OSD of brightness changes. (Closes: #501577)
  * Tweaked notifications a bit:
    - Replaced the heuristic for determining which should be fast
      notifications with an extra parameter.
    - Fast notifications stay around for a bit longer.
  * Made the volume stepping configurable, and set the default to 3.125%
    (which is 2dB for LineOut on at least ALC269 and ALC662).
  * Blacklist some ALSA volume controls; we want to alter only one of them.
    (Tested on ALC269 (901) and ALC662 (701).)
  * Cache audio control names etc. to avoid need to detect them every time
    the volume level is changed.
  * Enable audio power saving, defaulting to a 5-second delay before